# otchet-compose

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
doc/: otchet-compose.llm.ref.yml  prompt.txt
examples/: otchet-compose.yml
src/otchet_compose/: cli.py  config.py  init.py
src/otchet_compose/generator/: __init__.py  build.py  content.py  fields.py  page.py  styles.json  styles.py  title_page.py
src/otchet_compose/generator/blocks/: __init__.py  _base.py  figure.py  heading.py  list.py  paragraph.py  table.py
src/otchet_compose/generator/templates/: __init__.py  mirea.docx  mirea.py  mock.docx  rut.docx
tests/: conftest.py  test_build.py  test_config.py  test_title_page.py
tests/blocks/: test_figure.py  test_heading.py  test_list.py  test_paragraph.py  test_table.py
